--- a/config/database.yml
+++ b/config/database.yml
@@ -12,9 +12,8 @@ default: &default
 
 development:
   <<: *default
-  username: <%= ENV["DB_USER_NAME"] %>
-  password: <%= ENV["DB_PASSWORD"] %>
   database: <%= ENV["DB_DEVELOPMENT"] %>
+  host: localhost
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
